# mysqltuner_mcp

./: Dockerfile  Dockerfile.streamable-http  README.md  SECURITY.md  pyproject.toml  pytest.ini  server.json  smithery.yaml
.github/: release.yml
.github/workflows/: integration-tests.yml  publish-to-pypi.yml  release.yml
skills/mysql-perf-tuning/: SKILL.md
skills/mysql-perf-tuning/reference/: advanced-diagnostics.md  common-problems.md  configuration-recommendations.md  tool-reference.md  tsg-diagnostic-queries.md  tuning-workflow.md
src/mysqltuner_mcp/: server.py
src/mysqltuner_mcp/security/: __init__.py  error_sanitizer.py  identifiers.py  sql_guard.py
src/mysqltuner_mcp/services/: db_pool.py  sql_driver.py
src/mysqltuner_mcp/tools/: __init__.py  toolhandler.py  tools_diagnostic.py  tools_engines.py  tools_health.py  tools_index.py  tools_innodb.py  tools_memory.py  tools_performance.py  tools_schema.py  tools_security.py  tools_statements.py
tests/: test_security_error_sanitizer.py  test_security_identifiers.py  test_security_sql_guard.py  test_security_ssl_defaults.py  test_server.py  test_services.py  test_tools.py
tests/integration/: _compat.py  conftest.py  test__compat.py  test_protocol_smoke.py  test_security_e2e.py  test_seed_sanity.py  test_warmup_sanity.py
tests/integration/fixtures/: seed.sql  warmup_queries.py
tests/integration/test_tools/: test_diagnostic.py  test_engines.py  test_health.py  test_index.py  test_innodb.py  test_memory.py  test_performance.py  test_replication.py  test_schema.py  test_security_tools.py  (+1 more)
